# local-second-brain-mcp

./: .gitignore  README.md
mcp/: canvas.py  db.py  embeddings.py  extract.py  parser.py  pyproject.toml  reminders.py  server.py  sync.py  tasks.py  test_db.py  test_extract.py
memory/: README.md
